--- a/design/css/control.css
+++ b/design/css/control.css
@@ -1,5 +1,5 @@
-/*cent*/
-/*start home page jum*/
+/*..user-com .lead*/
+/*start home page */
 body{
 background:#fff;
 padding:auto;
@@ -121,7 +121,7 @@ width: 75%;
 margin: 100px auto;
 color: black;
 background: #fff;
-
+text-align: center;
 border: 1px solid rgba(222, 226, 230, 1);
 border-radius: .55em .55em .35em .35em ;
 padding: 0px;
@@ -167,8 +167,8 @@ font-size: 18px;
 border-radius:5px 5px 5px 5px;
 background-color:rgba(222, 226, 230, 1);
 padding-top: 5px;
-border-color:#FFCCCC; 
-margin-left:0px;
+border-color:rgba(222, 226, 230, 1); 
+margin-left:auto;
 margin-bottom: 5px;
 margin-top: 5px; 
 color: black;
@@ -177,7 +177,7 @@ transition: background,margin-right 1s;
 
 
 .btn:hover{
-	background:radial-gradient(circle, pink, gray, black);;
+	background-color:rgba(150, 150, 230, 1);
 	margin-right:5px; 
 	border-color: #FF6699
 
@@ -283,7 +283,7 @@ margin-top: 4px;
 }
 
 .user-com .lead{
-background:radial-gradient(circle,#FFCCCC,#FFFFFF ,#FFCCCC);
+background-color:rgba(215, 218, 216, 1);
 	/*background-color: rgba(215, 218, 216, 1);*/
 	position: relative;
 	top: 30px;
@@ -449,4 +449,115 @@ text-align: right;
 	font-size:20px;
 }
 
+/* start slide show ===============================================================*/
+
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* end slide show ===============================================================*/
 
